compiler/tools/fpp-check/test/connection_direct/undef_instance.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/connection_direct/undef_instance.fpp:3.5
    c.out -> c.in
    ^
error: cannot find component instance `c` in this scope
